# gaiaunlimited

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  cube_galaxy_sky.ipynb  setup.cfg
.github/workflows/: python-package.yml
docs/: SubsampleSelectionFunction.ipynb  api.rst  citation.rst  community-examples.rst  conf.py  dr3-empirical-completeness.ipynb  dr3-rvs.ipynb  getting-started.ipynb  index.rst  install.rst  requirements.txt  scanninglaw.ipynb  tutorial_DR3SelectionFunctionTCG.ipynb
docs/notebooks/: APOGEE_selection_function.ipynb  RC_galfit_demo.ipynb  RedClump_GSP-Spec_SF.ipynb  SubsampleSF_HMLE_Tutorial.ipynb  SubsampleSF_Tutorial.ipynb  constructing_SelectionFunctions.ipynb  cube_galaxy_sky.ipynb  dr3-empirical-completeness.ipynb  dr3-rvs.ipynb  dr3-unresolved-binaries.ipynb  getting-started.ipynb  rave_ratios.ipynb  scanninglaw.ipynb
docs/notebooks/Aurora/: 1. Download and prepare RGB stars catalogue.ipynb  1a. Plot Kinematics.ipynb  2. Extinctions.ipynb  2. XP selection function.ipynb  3. Luminosity function.ipynb  3. Parallax errors.ipynb  4. Parallax errors.ipynb  5. Domain.ipynb  6. XP selection function.ipynb  7. Probability transformation function.ipynb  8. Aurora model.ipynb  README.md  config.py  domain.py  model.csv  model_ast.csv  phys_models.py  projector.py  requirements.txt  utils.py
docs/notebooks/RedClumpGaiaAllWISE/: RC_galfit_demo.ipynb  README.md  dtools.py  packages_to_import.py  redclumptools.py
docs/notebooks/RedClumpGaiaAllWISE/rcdemo/: autil.py  dtools.py  packages_to_import.py  putil.py  redclumptools.py  sutil.py  sutil_sanj.py
gaia_scanninglaw/: __init__.py  core.py  fetch_utils.py  test_core.py
gaiasf/: __init__.py  fetch_utils.py  scanninglaw.py  selectionfunctions.py  test_core.py  utils.py
gaiasf/data/dr2/: Photometry.csv
gaiasf/data/dr3/: Astrometry.csv
gaiasf/selectionfunctions/: __init__.py  subsample.py  survey.py
gaiasf/selectionfunctions/tests/: test_survey.py
src/gaiasf/: fetch_utils.py  scanninglaw.py  test_core.py
src/gaiasf/data/dr2/: Astrometry.csv  Spectroscopy.csv
src/gaiasf/data/dr3/: Astrometry.csv
src/gaiasf/selectionfunctions/: __init__.py  subsample.py  survey.py  surveyTCG.py
src/gaiasf/tests/: test_scanninglaw.py
src/gaiaunlimited/: __init__.py  fetch_utils.py  scanninglaw.py  utils.py
src/gaiaunlimited/data/: apogee_sampling_fractions.csv
src/gaiaunlimited/data/dr3/: Astrometry.csv  Photometry.csv  README.md  Spectroscopy.csv
src/gaiaunlimited/selectionfunctions/: __init__.py  apogee.py  binaries.py  subsample.py  survey.py  surveyTCG.py
tests/: test_HMLE.py  test_apogee.py  test_scanninglaw.py  test_subsample.py  test_survey.py  test_surveyTCG.py
