[metadata]
name = gaiasf
version = 0.1.0
author = GaiaUnlimited
author_email = soh@eml.cc
description = Tools for manipulating Gaia selection functions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GaiaUnlimited/gaiasf
project_urls =
    Bug Tracker = https://github.com/GaiaUnlimited/gaiasf/issues
keywords = astronomy, Gaia, selection function, scanning law
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find_namespace:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    numpy
    scipy
    astropy
    pandas
    xarray
    healpy
    h5py

[options.packages.find]
where = src

[options.package_data]
gaiasf.data =
    dr2/*.csv
    dr3/*.csv
    horizons_results_gaia.txt
