[metadata]
name = gaiaunlimited
version = attr: gaiaunlimited.__version__
author = GaiaUnlimited
maintainer = Alfred Castro-Ginard, Tristan Cantat-Gaudin
maintainer_email = acastro@strw.leidenuniv.nl, cantat@mpia-hd.mpg.de
description = Tools for manipulating Gaia selection functions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GaiaUnlimited/gaiaunlimited
project_urls =
    Bug Tracker = https://github.com/GaiaUnlimited/gaiaunlimited/issues
keywords = astronomy, Gaia, selection function, scanning law
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find_namespace:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    numpy
    scipy
    astropy
    astroquery
    pandas
    xarray
    healpy
    h5py
    tqdm
    requests

[options.packages.find]
where = src

[options.package_data]
gaiaunlimited.data =
    dr2/*.csv
    dr3/*.csv
    horizons_results_gaia.txt
