[metadata]
name = gaiaunlimited
version = attr: gaiaunlimited.__version__
author = GaiaUnlimited
maintainer = Anthony G.A. Brown, Alfred Castro-Ginard
maintainer_email = brown@strw.leidenuniv.nl, acastro@fqa.ub.edu
description = Tools for manipulating Gaia selection functions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GaiaUnlimited/gaiaunlimited
project_urls =
    Bug Tracker = https://github.com/GaiaUnlimited/gaiaunlimited/issues
keywords = astronomy, Gaia, selection function, scanning law
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find_namespace:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    numpy
    scipy >= 1.6.0
    astropy
    astropy_healpix
    astroquery
    pandas
    xarray
    healpy
    h5py
    tqdm
    requests
    astromet


[options.packages.find]
where = src

[options.package_data]
gaiaunlimited.data =
    dr2/*.csv
    dr3/*.csv
    horizons_results_gaia.txt
    apogee_sampling_fractions.csv
